# Adjudicator

./: README.md  adjudicator.py  pyproject.toml  requirements.txt
scripts/: collapse.bash  collapse_overlapping.py  collapse_self.bash  overlap_intervals.py  reduce_overlapping_exons.py  repeat_filter.py
tools/: adjudicate_model.py  gff3_in_memory.py  test_a.gff3  test_b.gff3  waointersect.py
